fix scrollbar on filters issue

--- a/src/styles/css/main.css
+++ b/src/styles/css/main.css
@@ -392,7 +392,7 @@ header {
 
 .list-inline {
   white-space: nowrap;
-  overflow-x: hidden; }
+  overflow: hidden; }
 
 .list-inline-item {
   padding: 0.2rem 0; }
