--- a/src/styles/scss/components/_filters.scss
+++ b/src/styles/scss/components/_filters.scss
@@ -14,7 +14,7 @@
 
 .list-inline {
   white-space: nowrap;
-  overflow-x: hidden;
+  overflow: hidden;
 }
 
 .list-inline-item {
